--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "map_sample",
   "private": true,
   "dependencies": {
+    "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.0"
   }
